kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: visit-counter
  labels:
    name: visit-counter
